Add bloat asm library